# agritrace_final

.github/workflows/: publish.yml
client/: Dockerfile  docker-compose.yml  next.config.js  package.json  tailwind.config.js  theme.config.tsx  tsconfig.json
client/src/: env.ts
client/src/components/btn/: Web3TransBtn.tsx
client/src/components/forms/: CustomFormControl.tsx
client/src/components/modals/: QrCode.tsx  SaleProductModal.tsx  ScanQRCode.tsx
client/src/components/navbar/: MainNav.tsx  NavItem.tsx  Search.tsx  TeamSwitcher.tsx  UserNav.tsx
client/src/components/stacks/: CustomStack.tsx
client/src/components/tabler/: CustomTable.tsx
client/src/components/trace/: Results.tsx
client/src/components/ui/: badge.tsx
client/src/config/: enviroment.ts  get-supported-chain.ts  get-url.ts
client/src/deployments/: index.ts
client/src/helpers/: index.ts
client/src/hooks/: useAccounts.ts  useAuthStateListener.ts  useDidHydrate.ts  useDisclosure.ts  useEntity.ts  useInterval.ts  useIsSSR.ts  useTimeout.ts  useTransactions.ts
client/src/hooks/store/: useAuth.ts
client/src/layouts/: DistributorLayout.tsx  ManufacturerLayout.tsx  RootLayout.tsx  SupplierLayout.tsx
client/src/pages/: 404.tsx  _app.tsx  dashboard.tsx  index.tsx  trace-info.tsx
client/src/providers/: AppProviders.tsx  AppServices.tsx
client/src/styles/: globals.css
client/src/types/: Account.ts  Contracts.ts  Entity.ts  Form.ts  Transaction.ts
client/src/utils/: index.ts
entity/: Cargo.toml  lib.rs
stakeholder_regitry/: Cargo.toml  lib.rs
transactions/: Cargo.toml  lib.rs
(+29 files in other folders)
