[package]
name = "transactions"
version = "0.1.0"
authors = ["Dr. Sean Vincent gitongavincent64@gmail.com"]
edition = "2021"

[dependencies]
ink = { version = "5.0.0-alpha", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
e2e-tests = []
